[package]
name = "rust-bulletproofs-pp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.4.0"
merlin = "3.0.0"
rand = "0.8.5"
secp256kfun = "0.8"
sha2 = "0.10"


[[bench]]
name = "norm-arg"
harness = false
